tests/baselines/reference/privacyCheckTypeOfInvisibleModuleError.errors.txt
tests/cases/compiler/privacyCheckTypeOfInvisibleModuleError.ts(6,26): error TS4025: Type of variable 'f' references inaccessible name 'Inner'.


==== tests/cases/compiler/privacyCheckTypeOfInvisibleModuleError.ts (1 errors) ====
    module Outer {
        module Inner {
            export var m: typeof Inner;
        }
    
        export var f: typeof Inner;
                             ~~~~~
!!! error TS4025: Type of variable 'f' references inaccessible name 'Inner'.
    }
    